[metadata]
name=django-adminlte
download_url=https://github.com/hpduongducnhan/django-adminlte-reup/tarball/master
description=ReUP django-adminlte
long_description=file:README.md
long_description_content_type=text/markdown
author=hpduongducnhan
author_email=hpduongducnhan@gmail.com
maintainer=hpduongducnhan
maintainer_email=hpduongducnhan@gmail.com
url=https://github.com/hpduongducnhan/django-adminlte-reup
license=MIT
license_files=LICENSE
classifiers=
    Classifier: Development Status :: 5 - Production/Stable
    Classifier: Environment :: Web Environment
    Classifier: Framework :: Django
    Classifier: Intended Audience :: Developers
    Classifier: License :: OSI Approved :: MIT License
    Classifier: Natural Language :: English
    Classifier: Operating System :: OS Independent
    Classifier: Programming Language :: Python
    Classifier: Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
    Classifier: Topic :: Internet :: WWW/HTTP
    Classifier: Topic :: Utilities

[options]
packages=
    django-adminlte
python_requires=<3,

[bdist_wheel]
universal=1
